--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -3,4 +3,12 @@
 <!-- everything extended from the base template will display on this page as well -->
 <h3 class="green-text text-lighten-1 center-align">Tasks</h3>
 
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_task') }}" class="btn-large light-green darken-2">
+            Add Task <i class="fas fa-plus-square right"></i>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
